k8s/oauthserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauthserver
  name: oauthserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauthserver
  strategy: {}
  template:
    metadata:
      labels:
        app: oauthserver
    spec:
      containers:
      - image: <PARAM_REGISTRY_IMAGE>
        imagePullPolicy: ""
        name: oauthserver
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
