k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:6-alpine
        imagePullPolicy: ""
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
