k8s/resourceserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resourceserver
  name: resourceserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resourceserver
  strategy: {}
  template:
    metadata:
      labels:
        app: resourceserver
    spec:
      containers:
      - image: k8s/02resourceserver:1.0-SNAPSHOT
        imagePullPolicy: ""
        name: resourceserver
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
