k8s/oauthserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauthserver
  name: oauthserver
spec:
  ports:
  - name: http-oauthserver
    port: 8080
    targetPort: 8080
  selector:
    app: oauthserver
status:
  loadBalancer: {}
